--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Quiz App</title>
 </head>
 <body>
     <div class="container-fluid m-2">
         <div class="row">
-            <a href="https://github.com/alperkilickaya/quizapp"><button class="btn btn-dark">GITHUB</button></a>
+            <a href="https://github.com/alperkilickaya/quizapp" target="_blank"><button class="btn btn-dark">GITHUB</button></a>
             
         </div>
     </div>
